made some changes
added docker file and make some changes in package.json file

--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
+    "postinstall": "npm rebuild bcrypt",
     "start": "node app.js"
+  },
+  "engines": {
+    "node": "20.15.1"
   },
   "keywords": [],
   "author": "",
