--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URI="mongodb://localhost:27017/miniproject"
+MONGO_URI="mongodb+srv://anujmishra26062002:anujmishra@cluster0.yrxpx.mongodb.net/"
