--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "app.js",
   "scripts": {
     "postinstall": "npm rebuild bcrypt",
-    "start": "node app.js"
+    "start": "node app.js",
+    "build": "echo 'Building project...' && cp -r src/* dist/"
   },
   "engines": {
     "node": "20.15.1"
