--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "postinstall": "npm rebuild bcrypt",
     "start": "node app.js",
-    
+    "build": "echo 'Building project...'"
   },
   "engines": {
     "node": "20.15.1"
